# gaussianNoiseVisual

./: CMakeLists.txt  README.rst  gaussN.command  gaussNnorun.command
source/: .main.cpp.swp  main.cpp
source/graphics/: light.cpp  light.h  material.cpp  material.h  shader.cpp  shader.h  vMesh.cpp  vMesh.h  vModel.cpp  vModel.h
source/graphics/models/: terrainGen.hpp  vCube.hpp  vLightsource.hpp  vTerrainGen.hpp
source/io/: .mouse.cpp.swp  .mouse.h.swp  camera.cpp  camera.h  keyboard.cpp  keyboard.h  mouse.cpp  mouse.h  screen.cpp  screen.h
source/math/: .gauss.cpp.swp  .gauss.h.swp  gauss.cpp  gauss.h
source/shaders/: 2Dcore.fs  2Dcore.vs  core.fs  core.vs  fragment_core.glsl  lightsource.fs  nofade_core.fs  nolight_core.fs  vertex_core.glsl
